[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "chainlit>=2.5.5",
    "griffe>=1.7.3",
    "langchain-core>=0.3.67",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.5.0",
    "mistralai>=1.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "tabulate>=0.9.0",
    "typing-extensions>=4.14.0",
]
