[project]
name = "hubspot-dynamic-multi-agent"
version = "0.1.0"
description = "HubSpot dynamic multi-agent system"
authors = [{name = "Ravi Theja", email = "ravi03071991@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.2",
    "mistralai>=1.9.3",
    "hubspot-api-client>=12.0.0",
]
